--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>Module 6</h1><br>
-        <h2>This lesson is going over arrays, objects, and methods!</h2><br>
+        <h2>This lesson is going over arrays, objects, and methods! Check the console for each example on the </h2><br>
         <h3>The first line on the console is an array, listing a few of my favorite foods I want to have this week! (notice how many cheese-related foods there are? I just think that's funny)</h3>
         <h3>The second line in the console is an object, listing out a description of a cherry pie! (very into food this assignment, I'm very hungry today!)</h3>
         <h3>The third line is an example of an array method: I want to add a list of favorite drinks to enjoy with my meals, so I created a favorite drinks array then added them to the existing array using the concat() method!</h3>
